@@ -4,6 +4,7 @@ v1.0.5
   biographical movies (pubmovies()), and "portrayed in" (pubportraits())
 + imdb_person: added method to retrieve interview list (interviews())
 + added overall results to the API test page
++ imdb_person: added methods for articles, pictorials and magazine covers
 
 v1.0.4 (26.05.2008)
 -------------------
